Change Scrolling text on front page

--- a/web server/templates/index.html
+++ b/web server/templates/index.html
@@ -57,9 +57,9 @@
             <div class="text-content">
               <h1>Hello,<br>
                 <span id="typed-strings">
-                  <span>I'm James Dean</span>
-                  <span>French Designer</span>
-                  <span>Working as a Freelance</span>
+                  <span>I'm S. H. McGrue</span>
+                  <span>Total Dumb Ass</span>
+                  <span>Working as an Expert</span>
                 </span>
                 <span id="typed"></span>
               </h1>
